--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,35 +17,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Verificar la conectividad de red
-      - name: Check network connectivity to Mabl
-        run: |
-          ping -c 3 cli.mabl.com || true
-          curl -I https://cli.mabl.com || true
+      # 2. Instalar Node.js (si tu flujo requiere Node.js)
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
 
-      # 3. Configurar DNS alternativo
-      - name: Set up DNS
-        run: |
-          echo "nameserver 8.8.8.8" | sudo tee /etc/resolv.conf > /dev/null
-          echo "nameserver 1.1.1.1" | sudo tee -a /etc/resolv.conf > /dev/null
-
-      # 4. Descargar e instalar Mabl CLI manualmente
+      # 3. Instalar Mabl CLI usando el script de instalación
       - name: Install Mabl CLI
         run: |
-          echo "Descargando Mabl CLI..."
-          curl -LO https://cli.mabl.com/download/latest/linux/mabl
+          # Descargar e instalar Mabl CLI
+          curl -s https://cli.mabl.com/download/cli/install.sh | bash
           
-          # Hacer que el binario sea ejecutable
-          chmod +x mabl
-          
-          # Mover el binario a un directorio en el PATH
-          sudo mv mabl /usr/local/bin/mabl
+          # Asegurarse de que el binario de Mabl esté en el PATH
+          export PATH="$HOME/.mabl/bin:$PATH"
           
           # Verificar que Mabl está accesible
           mabl --version
 
-      # 5. Ejecutar los tests en Mabl
+      # 4. Ejecutar los tests en Mabl
       - name: Run Mabl tests
         run: |
+          export PATH="$HOME/.mabl/bin:$PATH"
           mabl login --api-token ${{ secrets.MABL_API_TOKEN }}
           mabl test run --environment <ID del entorno> --test <ID del test>
