--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,19 +23,25 @@ jobs:
         with:
           node-version: '14'
 
-      # 3. Instalar dependencias necesarias
+      # 3. Instalar dependencias gráficas y de red
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libsecret-1-0 xvfb
+          sudo apt-get install -y libgtk-3-0 libgdk-pixbuf2.0-0 libsecret-1-0 dbus-x11 xvfb
 
-      # 4. Instalar Mabl CLI usando snap
+      # 4. Configurar D-Bus
+      - name: Set up D-Bus
+        run: |
+          sudo service dbus start
+          export $(dbus-launch)
+
+      # 5. Instalar Mabl CLI usando snap
       - name: Install Mabl CLI
         run: |
           sudo snap install mabl-app --classic
           export PATH="/snap/bin:$PATH"
 
-      # 5. Ejecutar Mabl en modo headless usando xvfb
+      # 6. Ejecutar Mabl en modo headless usando xvfb
       - name: Run Mabl tests
         run: |
           export PATH="/snap/bin:$PATH"
